tests/frontend/fail/array/create_arg_uninitialised_var.act
contract B

contract A

constructor
interface constructor(uint foo)


constructor
interface constructor()

creates
  A a := create A(x)
  uint x := 0
